@@ -4,6 +4,7 @@ import java.util.Date;
 
 import edu.colorado.phet.common.phetcommon.application.ISimInfo;
 import edu.colorado.phet.common.phetcommon.application.SessionCounter;
+import edu.colorado.phet.common.phetcommon.files.PhetInstallationPropertiesFile;
 import edu.colorado.phet.common.phetcommon.preferences.PhetPreferences;
 import edu.colorado.phet.common.phetcommon.resources.PhetResources;
 import edu.colorado.phet.common.phetcommon.util.DeploymentScenario;
@@ -84,11 +85,18 @@ public class SessionMessage extends StatisticsMessage {
                 new StatisticsMessageField( "user_preference_file_creation_time", PhetPreferences.getInstance().getPreferencesFileCreationTime() ),
                 new StatisticsMessageField( "user_total_sessions", SessionCounter.getInstance().getTotal() ),
                 
-                // Debug field for this that are split into multiple fields
-                new StatisticsMessageField( "debug_sim_version", simInfo.getVersion().formatForAboutDialog() ),
-                new StatisticsMessageField( "debug_host_java_version", jre.getVersion() ),
+
         };
         super.addFields( fields );
+        
+        if ( DeploymentScenario.getInstance() == DeploymentScenario.PHET_INSTALLATION ) {
+            PhetInstallationPropertiesFile p = PhetInstallationPropertiesFile.getInstance();
+            addField( new StatisticsMessageField( "user_installation_timestamp", p.getInstallationTimestamp() ) );
+        }
+        
+        // Debug fields, for things that are split into multiple fields
+        addField( new StatisticsMessageField( "debug_sim_version", simInfo.getVersion().formatForAboutDialog() ) );
+        addField( new StatisticsMessageField( "debug_host_java_version", jre.getVersion() ) );
     }
 
     private void initTimeZone() {
